[package]
name = "rust-web"
version = "0.1.0"
authors = ['John Webb <John.Webb94@gmail.com>']
description = "Simple Rust Web visualizer"
license = "MIT/Apache-2.0"
repository = "https://github.com/JohnWebb4/rust-web"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
